// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPage redirects with alert when load request fails 1`] = `
<RedirectAndAlert
  alert={
    Object {
      "message": "Unable to load test-snippet snippet",
      "type": "error",
    }
  }
  to="/snippets"
/>
`;

exports[`EditPage renders disabled form when submitting 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "View All Snippets",
      "to": "/snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Save Snippet",
      "disabled": true,
      "onClick": [Function],
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "Delete",
        "to": "/",
        "visible": [Function],
      },
      Object {
        "Component": [Function],
        "content": "Duplicate",
        "to": Object {
          "pathname": "/snippets/create",
          "state": Object {
            "id": "test-snippet",
            "subaccountId": undefined,
          },
        },
        "visible": [Function],
      },
    ]
  }
  title="Edit Snippet"
>
  <Form
    onSubmit={[Function]}
  >
    <Grid>
      <Grid.Column
        lg={4}
        xs={12}
      >
        <Panel
          sectioned={true}
        >
          <Stack>
            <Field
              component={[Function]}
              disabled={true}
              helpText={
                <ExternalLink
                  to="https://developers.sparkpost.com/api/snippets/"
                >
                  Learn more about Snippets
                </ExternalLink>
              }
              label="Snippet Name"
              name="name"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
            <Field
              component={[Function]}
              disabled={true}
              helpText="This is a unique identifier to reference your snippet in a template."
              label="Snippet ID"
              name="id"
            />
            <SubaccountSection
              disabled={true}
              newTemplate={false}
            />
            <CopyField
              helpText="Copy and use this code in your templates"
              hideCopy={false}
              label="Code Example"
              value="{{ render_snippet( \\"test-snippet\\" ) }}"
            />
          </Stack>
        </Panel>
      </Grid.Column>
      <Grid.Column
        lg={8}
        xs={12}
      >
        <ContentEditor
          contentOnly={true}
          readOnly={true}
        />
      </Grid.Column>
    </Grid>
  </Form>
</Page>
`;

exports[`EditPage renders disabled form when user does not have authorization to modify snippets 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "View All Snippets",
      "to": "/snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Save Snippet",
      "disabled": true,
      "onClick": [Function],
    }
  }
  secondaryActions={Array []}
  title="Edit Snippet"
>
  <Form
    onSubmit={[Function]}
  >
    <Grid>
      <Grid.Column
        lg={4}
        xs={12}
      >
        <Panel
          sectioned={true}
        >
          <Stack>
            <Field
              component={[Function]}
              disabled={true}
              helpText={
                <ExternalLink
                  to="https://developers.sparkpost.com/api/snippets/"
                >
                  Learn more about Snippets
                </ExternalLink>
              }
              label="Snippet Name"
              name="name"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
            <Field
              component={[Function]}
              disabled={true}
              helpText="This is a unique identifier to reference your snippet in a template."
              label="Snippet ID"
              name="id"
            />
            <SubaccountSection
              disabled={true}
              newTemplate={false}
            />
            <CopyField
              helpText="Copy and use this code in your templates"
              hideCopy={false}
              label="Code Example"
              value="{{ render_snippet( \\"test-snippet\\" ) }}"
            />
          </Stack>
        </Panel>
      </Grid.Column>
      <Grid.Column
        lg={8}
        xs={12}
      >
        <ContentEditor
          contentOnly={true}
          readOnly={true}
        />
      </Grid.Column>
    </Grid>
  </Form>
</Page>
`;

exports[`EditPage renders edit form 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "View All Snippets",
      "to": "/snippets",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Save Snippet",
      "disabled": undefined,
      "onClick": [Function],
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "Delete",
        "to": "/",
        "visible": [Function],
      },
      Object {
        "Component": [Function],
        "content": "Duplicate",
        "to": Object {
          "pathname": "/snippets/create",
          "state": Object {
            "id": "test-snippet",
            "subaccountId": undefined,
          },
        },
        "visible": [Function],
      },
    ]
  }
  title="Edit Snippet"
>
  <Form
    onSubmit={[Function]}
  >
    <Grid>
      <Grid.Column
        lg={4}
        xs={12}
      >
        <Panel
          sectioned={true}
        >
          <Stack>
            <Field
              component={[Function]}
              helpText={
                <ExternalLink
                  to="https://developers.sparkpost.com/api/snippets/"
                >
                  Learn more about Snippets
                </ExternalLink>
              }
              label="Snippet Name"
              name="name"
              validate={
                Array [
                  [Function],
                  [Function],
                ]
              }
            />
            <Field
              component={[Function]}
              disabled={true}
              helpText="This is a unique identifier to reference your snippet in a template."
              label="Snippet ID"
              name="id"
            />
            <SubaccountSection
              newTemplate={false}
            />
            <CopyField
              helpText="Copy and use this code in your templates"
              hideCopy={false}
              label="Code Example"
              value="{{ render_snippet( \\"test-snippet\\" ) }}"
            />
          </Stack>
        </Panel>
      </Grid.Column>
      <Grid.Column
        lg={8}
        xs={12}
      >
        <ContentEditor
          contentOnly={true}
        />
      </Grid.Column>
    </Grid>
  </Form>
</Page>
`;
